# This file is part of cordial. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/cordial/master/COPYRIGHT. No part of cordial, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of cordial. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/cordial/master/COPYRIGHT.


[package]
name = "cordial"
description = "cordial"
keywords = ["cordial"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
documentation = "https://github.com/lemonrock/cordial/blob/master/README.md"
homepage = "https://github.com/lemonrock/cordial"
repository = "https://github.com/lemonrock/cordial.git"
exclude = ["*"]
include = ["README.md", "LICENSE", "COPYRIGHT", "src/**/*.rs", "benches/**/*.rs", "examples/**/*.rs", "tests/**/*.rs", "Cargo.toml", "rustfmt.toml", "clippy.toml", "lib/**/*", "src/**/*.h", "tools/**/*", "bindgen-wrapper.conf.d/**/*", "compile-*.conf.d/**/*"]
#build = "src/build.rs"
# Relative to Cargo.toml
readme = "README.md"
publish = false
version = "0.0.0"

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1

[dependencies]
brotli2 = "0.3.0"
clap = "2.26.0"
log = "0.3"
handlebars = "0.29"
image = "0.15.0"
maplit = "0.1.4"
mktemp = "0.3.1"
num_cpus = "1.6.2"
oxipng = "0.16.3"
quick-error = "1.1.0"
sass-rs = "0.2.0"
serde_derive = "^1.0.8"
serde-hjson = "^0.8.1"
serde_json = "^1.0.2"
serde = "^1.0.8"
stderr-logging = "0.0.1"
svgcleaner = "0.9.1"
svgdom = "0.6.0"
url = "1.5.1"
url_serde = "0.2.0"
zopfli = "0.3.6"

[target.'cfg(unix)'.dependencies]
nix = "0.9.0"
